--- a/static/css/schedule.css
+++ b/static/css/schedule.css
@@ -40,15 +40,15 @@ body {
 /* === HEADER === */
 .header {
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-between;
     width: 100%;
     min-height: 100px;
     max-height: 150px;
-    gap: 20px;
-    margin-bottom: 10px;
-    padding-bottom: 10px;
+    margin-top: 18px;
+    margin-bottom: 20px;
+    padding: 0 30px 10px 30px;
+    box-sizing: border-box;
     opacity: 0;
     animation: fadeIn 0.4s ease-out forwards;
     animation-delay: 0.05s;
@@ -56,11 +56,10 @@ body {
 
 .tournament-name {
     flex: 1;
-    max-width: 1000px;
     font-family: 'TT_Bluescreens', sans-serif;
     font-style: italic;
     font-weight: 800;
-    font-size: 80px;
+    font-size: 90px;
     line-height: 1.1;
     letter-spacing: -0.04em;
     color: #FFFFFF;
@@ -70,12 +69,13 @@ body {
     overflow: hidden;
     text-overflow: ellipsis;
     text-align: left;
-    align-self: center;
+    text-transform: uppercase;
+    padding-right: 30px; /* Отступ от логотипов */
 }
 
 /* Авто-уменьшение шрифта для длинных названий */
 .tournament-name.long-name {
-    font-size: 60px;
+    font-size: 90px;
 }
 
 .tournament-name.very-long-name {
@@ -84,10 +84,8 @@ body {
 
 .logos {
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
     align-items: center;
-    gap: 20px;
+    gap: 30px;
     height: 100px;
     flex-shrink: 0;
 }
@@ -99,9 +97,9 @@ body {
     background-position: center;
 }
 
-.logo1 { width: 140px; }
-.logo2 { width: 145px; }
-.logo3 { width: 170px; }
+.logo1 { width: 145px; }
+.logo2 { width: 100px; }
+.logo3 { width: 100px; }
 .logo4 { width: 145px; }
 
 /* === MAIN GRID === */
@@ -109,10 +107,11 @@ body {
     display: flex;
     flex: 1;
     gap: 10px;
-    width: 100%;
-    max-height: 930px;
+    width: 97%;
+    max-height: 900px;
     overflow: hidden;
     position: relative;
+	margin-left: 30px;
 }
 
 /* === TIME SCALE === */
@@ -168,6 +167,9 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+	white-space: nowrap;
+	overflow: hidden; 
+	text-overflow: ellipsis;
 }
 
 .court-header h3 {
