--- a/static/css/intro_player.css
+++ b/static/css/intro_player.css
@@ -73,6 +73,7 @@ html, body {
     background-repeat: no-repeat;
     background-position: center;
     flex-shrink: 0;
+	opacity: 0.0;
 }
 
 .player-name {
