--- a/static/css/composite_bg_round_3.css
+++ b/static/css/composite_bg_round_3.css
@@ -1,5 +1,5 @@
 /**
- * Стили для фоновой страницы Round Robin 3
+ * Стили для фоновой страницы Round Robin 1
  * Базовое разрешение: 1920x1080 (FHD)
  */
 
@@ -12,7 +12,7 @@
 
 @font-face {
     font-family: 'TT_Bluescreens';
-    src: url('../fonts/TT-Bluescreens-Trial-Bold-Italic.ttf') format('truetype');
+    src: url('/static/fonts/TT Bluescreens Trial Bold Italic.ttf') format('truetype');
     font-weight: 700;
     font-style: italic;
 }
@@ -46,7 +46,7 @@ html, body {
     width: 100%;
     height: 100%;
     z-index: 0;
-    background-image: url('/static/images/bg_round_3.png');
+    background-image: url('/static/images/bg_round_1.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -56,8 +56,8 @@ html, body {
 .header {
     position: absolute;
     top: 15px;
-    left: 15px;
-    right: 15px;
+    left: 110px;
+    right: 110px;
     height: 130px;
     display: flex;
     flex-direction: row;
@@ -72,11 +72,11 @@ html, body {
 /* === НАЗВАНИЕ ТУРНИРА === */
 .tournament-name {
     flex: 1;
-    max-width: 900px;
+    max-width: 1100px;
     font-family: 'TT_Bluescreens', sans-serif;
     font-style: italic;
     font-weight: 800;
-    font-size: 72px;
+    font-size: 96px;
     line-height: 1.1;
     letter-spacing: -0.02em;
     color: #FFFFFF;
@@ -89,12 +89,12 @@ html, body {
 }
 
 .tournament-name.long-name {
-    font-size: 56px;
+    font-size: 76px;
     line-height: 1.15;
 }
 
 .tournament-name.very-long-name {
-    font-size: 44px;
+    font-size: 64px;
     line-height: 1.2;
 }
 
@@ -104,12 +104,12 @@ html, body {
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
-    gap: 20px;
+    gap: 40px;
     height: 130px;
 }
 
 .logo {
-    height: 100px;
+    height: 150px;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -117,17 +117,17 @@ html, body {
     animation: fadeInScale 0.5s ease-out forwards;
 }
 
-.logo1 { width: 140px; animation-delay: 0.3s; }
-.logo2 { width: 145px; animation-delay: 0.4s; }
-.logo3 { width: 170px; animation-delay: 0.5s; }
-.logo4 { width: 145px; animation-delay: 0.6s; }
+.logo4 { width: 150px; animation-delay: 0.6s; }
+.logo3 { width: 90px; animation-delay: 0.5s; }
+.logo2 { width: 90px; animation-delay: 0.4s; }
+.logo1 { width: 150px; animation-delay: 0.3s; }
 
 /* === ДЕКОРАТИВНАЯ ЛИНИЯ === */
 .header-line {
     position: absolute;
     top: 155px;
-    left: 15px;
-    right: 15px;
+    left: 100px;
+    right: 45px;
     height: 3px;
     background: linear-gradient(90deg, #AED557 0%, #84C100 50%, transparent 100%);
     z-index: 10;
