--- a/static/css/schedule_new.css
+++ b/static/css/schedule_new.css
@@ -12,7 +12,7 @@
 }
 
 body {
-    font-family: 'Onest', Arial, sans-serif;
+    font-family: 'Onest';
     background: transparent;
     color: #FFFFFF;
     width: 3840px;
@@ -75,7 +75,7 @@ body {
     height: calc(100% - 200px);
     gap: 20px;
     width: 100%;
-    max-height: 1960px;
+    max-height: 1920px;
     overflow: hidden;
     position: relative;
 }
