--- a/static/css/vs.css
+++ b/static/css/vs.css
@@ -14,7 +14,7 @@
 
 @font-face {
     font-family: 'Bluescreens';
-    src: url('/static/fonts/TT-Bluescreens-Trial-Bold-Italic.ttf') format('truetype');
+    src: url('/static/fonts/TT Bluescreens Trial Bold Italic.ttf') format('truetype');
     font-weight: 700;
     font-style: italic;
 }
@@ -269,6 +269,7 @@ html, body {
     background-repeat: no-repeat;
     border-radius: 4px;
     flex-shrink: 0;
+	opacity: 0.0;
 }
 
 .player-name {
